--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Galactic-weather</title>
-    <link rel="stylesheet" href="./src/pages/index.css" />
+    <link rel="stylesheet" href="./pages/index.css" />
   </head>
   <body>
     <div class="page">
       <div class="page__container">
         <div class="page__mobile-background">
-          <img class="page__logo" src="./src/images/logo.png" alt="logo" />
+          <img class="page__logo" src="./images/logo.png" alt="logo" />
           <!--  Температура и основная инфа -->
           <div class="page__main-info">
             <p class="page__main-info-temp"></p>
@@ -55,6 +55,6 @@
         </div>
       </div>
     </div>
-    <script type="module" src="./src/pages/index.js"></script>
+    <script type="module" src="./pages/index.js"></script>
   </body>
 </html>
